# AlcheMark

./: .coveragerc  .gitignore  README.md  conftest.py  main.py  publish.sh  pyproject.toml  setup.py
alchemark_ai/: __init__.py  main.py
alchemark_ai/formatter/: formatter_md.py
alchemark_ai/models/: PDFResult.py  __init__.py
examples/: basic_usage.py
src/: main.py
src/configs/: logger.py
src/formatter/: formatter_md.py
src/models/: FormattedResult.py  PDFResult.py  __init__.py
src/pdf2md/: pdf2md.py
tests/: conftest.py  test_formatter.py  test_integration.py  test_models.py  test_pdf2md.py
