[project]
name = "alchemark-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langdetect>=1.0.9",
    "pydantic>=2.11.3",
    "pymupdf>=1.25.5",
    "pymupdf4llm>=0.0.21",
    "pytest-cov>=6.1.1",
    "tiktoken>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap:241",
    "ignore::DeprecationWarning:_pytest.runner",
    "ignore::DeprecationWarning:sys"
]
